<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Experimento1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_Atividade2"
        android:textIsSelectable="false"
        android:textSize="24dp"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_cancelar_notificacao"
        android:id="@+id/bt_cancelarNotificacao"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_cancelar_todas_notificacoes"
        android:id="@+id/bt_cancelarTodas"
        android:layout_below="@+id/bt_cancelarNotificacao"
        android:layout_alignLeft="@+id/bt_cancelarNotificacao"
        android:layout_alignStart="@+id/bt_cancelarNotificacao"
        android:layout_marginTop="5dp" />

</RelativeLayout>
